Fix linters and metadata
With update of ansible-lint to version >=6.0.0 a lot of new
linters were added, that enabled by default. In order to comply
with linter rules we're applying changes to the role.

With that we also update metdata to reflect current state.

Depends-On: https://review.opendev.org/c/openstack/ansible-role-systemd_service/+/888223
Change-Id: I558a0fee0b0bf8c86f5bd73dca2b9571f3e4e287

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -18,17 +18,17 @@ galaxy_info:
   description: Installation and setup of Adjutant
   company: ELASTX
   license: Apache2
-  min_ansible_version: 2.2
+  role_name: os_adjutant
+  namespace: openstack
+  min_ansible_version: "2.10"
   platforms:
     - name: Ubuntu
       versions:
-        - xenial
-  categories:
+        - focal
+        - jammy
+  galaxy_tags:
     - cloud
     - python
     - adjutant
     - development
     - openstack
-dependencies:
-  - apt_package_pinning
-  - openstack_openrc
