--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -33,7 +33,8 @@ adjutant_bin: "/openstack/venvs/adjutant-{{ adjutant_venv_tag }}/bin"
 
 adjutant_git_repo: https://opendev.org/openstack/adjutant
 adjutant_git_install_branch: master
-adjutant_upper_constraints_url: "{{ requirements_git_url | default('https://releases.openstack.org/constraints/upper/' ~ requirements_git_install_branch | default('master')) }}"
+adjutant_upper_constraints_url: >-
+  {{ requirements_git_url | default('https://releases.openstack.org/constraints/upper/' ~ requirements_git_install_branch | default('master')) }}
 adjutant_git_constraints:
   - "--constraint {{ adjutant_upper_constraints_url }}"
 
@@ -48,7 +49,11 @@ adjutant_galera_use_ssl: "{{ galera_use_ssl | default(False) }}"
 adjutant_galera_ssl_ca_cert: "{{ galera_ssl_ca_cert | default('/etc/ssl/certs/galera-ca.pem') }}"
 adjutant_galera_port: "{{ galera_port | default('3306') }}"
 adjutant_galera_setup_host: "{{ openstack_db_setup_host | default('localhost') }}"
-adjutant_galera_setup_python_interpreter: "{{ openstack_db_setup_python_interpreter | default((adjutant_galera_setup_host == 'localhost') | ternary(ansible_playbook_python, ansible_python['executable'])) }}"
+adjutant_galera_setup_python_interpreter: >-
+  {{
+    openstack_db_setup_python_interpreter | default(
+      (adjutant_galera_setup_host == 'localhost') | ternary(ansible_playbook_python, ansible_python['executable']))
+  }}
 
 ## Service Type and Data
 adjutant_role_name: admin
@@ -60,7 +65,11 @@ adjutant_service_port: 5050
 adjutant_service_project_name: service
 adjutant_service_in_ldap: "{{ service_ldap_backend_enabled | default(False) }}"
 adjutant_service_setup_host: "{{ openstack_service_setup_host | default('localhost') }}"
-adjutant_service_setup_host_python_interpreter: "{{ openstack_service_setup_host_python_interpreter | default((adjutant_service_setup_host == 'localhost') | ternary(ansible_playbook_python, ansible_python['executable'])) }}"
+adjutant_service_setup_host_python_interpreter: >-
+  {{
+    openstack_service_setup_host_python_interpreter | default(
+      (adjutant_service_setup_host == 'localhost') | ternary(ansible_playbook_python, ansible_python['executable']))
+  }}
 adjutant_bind_address: "{{ openstack_service_bind_address | default('0.0.0.0') }}"
 adjutant_service_proto: http
 adjutant_service_publicuri_proto: "{{ openstack_service_publicuri_proto | default(adjutant_service_proto) }}"
@@ -77,7 +86,8 @@ adjutant_horizon_publicurl: "{{ openstack_service_publicuri_proto | default(adju
 # uWSGI settings
 adjutant_wsgi_threads: 1
 adjutant_wsgi_processes_max: 16
-adjutant_wsgi_processes: "{{ [[(ansible_facts['processor_vcpus']//ansible_facts['processor_threads_per_core'])|default(1), 1] | max * 2, adjutant_wsgi_processes_max] | min }}"
+adjutant_wsgi_processes: >-
+  {{ [[(ansible_facts['processor_vcpus'] // ansible_facts['processor_threads_per_core']) | default(1), 1] | max * 2, adjutant_wsgi_processes_max] | min }}
 adjutant_use_uwsgi: True
 adjutant_uwsgi_tls:
   crt: "{{ adjutant_ssl_cert }}"
@@ -263,7 +273,7 @@ adjutant_pip_packages:
   - systemd-python
 
 adjutant_pip_extra_packages:
-    - mysqlclient
+  - mysqlclient
 
 ###
 ### Backend TLS
@@ -310,5 +320,5 @@ adjutant_pki_install_certificates:
     mode: "0600"
 
 # Define user-provided SSL certificates
-#adjutant_user_ssl_cert: <path to cert on ansible deployment host>
-#adjutant_user_ssl_key: <path to cert on ansible deployment host>
+# adjutant_user_ssl_cert: <path to cert on ansible deployment host>
+# adjutant_user_ssl_key: <path to cert on ansible deployment host>
