--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -25,7 +25,7 @@
   retries: 5
   delay: 2
   listen:
-    - Restart adjutant services
+    - Restart envoy-translator services
     - systemd service changed
     - cert installed
 
@@ -43,6 +43,6 @@
   retries: 5
   delay: 2
   listen:
-    - Restart adjutant services
+    - Restart envoy-translator services
     - systemd service changed
     - cert installed
