--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -100,13 +100,13 @@ envoy_translator_api_init_overrides: {}
 ## Service Name-Group Mapping
 envoy_translator_services:
   envoy_translator-api:
-    group: envoy_translater-api
-    service_name: envoy_translater
+    group: envoy_translator-api
+    service_name: envoy_translator
     service_enabled: true
     init_config_overrides: "{{ envoy_translator_api_init_overrides }}"
-    execstarts: "{{ envoy_translator_bin }}/envoy_translater-api"
+    execstarts: "{{ envoy_translator_bin }}/envoy_translator-api"
     wsgi_app: "{{ envoy_translator_use_uwsgi }}"
-    wsgi_name: envoy_translater-api-wsgi
+    wsgi_name: envoy_translator-api-wsgi
     uwsgi_overrides: "{{ envoy_translator_api_uwsgi_ini_overrides }}"
     uwsgi_bind_address: "{{ envoy_translator_bind_address }}"
     uwsgi_port: "{{ envoy_translator_service_port }}"
