--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -104,9 +104,9 @@ envoy_translator_services:
     service_name: envoy_translator
     service_enabled: true
     init_config_overrides: "{{ envoy_translator_api_init_overrides }}"
-    execstarts: "{{ envoy_translator_bin }}/envoy_translator-api"
+    execstarts: "{{ envoy_translator_bin }}/envoy-translator-api"
     wsgi_app: "{{ envoy_translator_use_uwsgi }}"
-    wsgi_name: envoy_translator-api-wsgi
+    wsgi_name: envoy-translator-api-wsgi
     uwsgi_overrides: "{{ envoy_translator_api_uwsgi_ini_overrides }}"
     uwsgi_bind_address: "{{ envoy_translator_bind_address }}"
     uwsgi_port: "{{ envoy_translator_service_port }}"
